version 0.5
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed memory leak in avflt_proc_add(), thanks to Robert Minsk

version 0.4
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- dentry_open adapted to new 2.6.29 security context - struct cred
	- added support for "trusted" processes
	- added sysfs interface for registered and trusted processes

version 0.3
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- better fix of open for files bigger then 2GB
	  O_LARGEFILE flag is set base on original f_flags

version 0.2
	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
	- fixed open for files bigger then 2GB(MAX_NON_LFS)

version 0.1
	* initial release
